--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # Authentication
 GOOGLE_ID=955646115109-6hiilvkb65p2d3qrjnpmjmmegnlv359r.apps.googleusercontent.com
 GOOGLE_SECRET=Z-sHcMLkYgZhXuWqz5tAWReo
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://amazon-latest-tailwind.vercel.app/api/auth/callback/google
 
 # Stripe
 STRIPE_PUBLIC_KEY=key_goes_here
@@ -10,7 +10,7 @@ STRIPE_SECRET_KEY=key_goes_here
 # Stripe Terminal/CLI
 STRIPE_SIGNING_SECRET=key_goes_here
 
-HOST=http://localhost:3000
+HOST=https://amazon-latest-tailwind.vercel.app
 
 # Need to add this to... google cloud
-# http://localhost:3000/api/auth/callback/google
+# https://amazon-latest-tailwind.vercel.app/api/auth/callback/google
